...
                    text = "${stringResource(Res.string.last_updated)}: $passwordLastUpdatedStr"
                )
            },
            trailingContent = {
                OutlinedButton(
                    onClick = onClickChangePassword,
                    modifier = Modifier.testTag("password_change_btn"),
                ) {
                    Text(
                        text = stringResource(
                            if(personPasswordVal != null)
                                Res.string.change
                            else
...
