appId: org.openeel.app

---
#  Admin add new class
- tapOn:
       id: "nav_classes"
- assertVisible:
    id: "app_title"
    text: "Classes"
- tapOn:
    id: "floating_action_button"   #  +Class button
- assertVisible:
    id: "app_title"
    text: "Add class"
- tapOn: "Class name*"
- inputText: ${CLASSNAME}
- tapOn: "Save"
