appId: org.openeel.app

---
#  Admin add new class
- tapOn: "Classes"
- assertVisible:
    id: "app_title"
    text: "Classes"
- tapOn:
    id: "floating_action_button"   #  +Class button
- assertVisible:
    id: "app_title"
    text: "Add class"
- tapOn: "Class name*"
- inputText: ${CLASSNAME}
- tapOn: "Save"

- runFlow:
    file: "admin_add_new_student_to_class.yaml"
    env:
      CLASSNAME: "TestClass"
      FIRSTNAME: StudentA
      LASTNAME: User

- runFlow:
    file: "admin_add_new_student_to_class.yaml"
    env:
      CLASSNAME: "TestClass"
      FIRSTNAME: StudentB
      LASTNAME: User
- runFlow:
    file: "admin_add_new_student_to_class.yaml"
    env:
      CLASSNAME: "TestClass"
      FIRSTNAME: StudentC
      LASTNAME: User

- runFlow:
    file: "admin_add_new_teacher_to_class.yaml"
    env:
      CLASSNAME: "TestClass"
      FIRSTNAME: TeacherA
      LASTNAME: User

- runFlow:
    file: "create_account_for_class_member.yaml"
    env:
      CLASSNAME: "TestClass"
      MEMBERNAME: TeacherA User
      MEMBERUSERNAME: teacherauser

- runFlow:
    file: "create_account_for_class_member.yaml"
    env:
      CLASSNAME: "TestClass"
      MEMBERNAME: StudentA User
      MEMBERUSERNAME: studentauser

- runFlow:
    file: "create_account_for_class_member.yaml"
    env:
      CLASSNAME: "TestClass"
      MEMBERNAME: StudentB User
      MEMBERUSERNAME: studentbuser