appId: org.openeel.app

---
- tapOn: "Classes"
- tapOn: "New Class"
# Admin copy invite code to add student
- tapOn: "Add Student"
- copyTextFrom:
    id: "invite_code"


# Student sign-up via invite code to the class
- runFlow:
    file: "e2e_artifact_upload.yaml"
    env:
      NAME: "db-admin-invited-student"
- clearState: org.openeel.app
- launchApp:
    arguments:
      respect_directory: ${output.SCHOOL_URL}

- tapOn: "Get Started"

- runFlow:
    file: "get_started_select_school_by_name.yaml"
    env:
      SCHOOL_NAME: ${SCHOOL_NAME}
- tapOn: "I have an invite code"
- tapOn: "Invite code"
- pasteText
- tapOn: "Next"
- assertVisible:
    id: "app_title"
- tapOn: "I’m a Student"
- assertVisible:
    id: "app_title"
    text: "Your profile"
- tapOn: "Your name*"
- inputText: "Student User"
- tapOn:
      text: "Gender*"
      retryTapIfNoChange: true
- tapOn: "Female"
- tapOn: "Your date of birth*"
- runScript:
    file: "../scripts/setDate.js"
- inputText: ${output.pastYearDateC}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Create account"
- assertVisible: "studentuser"  #username
- tapOn: "Next"
- tapOn: "Password*"
- inputText: "tests1"
- tapOn: "Sign-up"
- assertVisible:
    id: "app_title"
    text: "Waiting for approval"
- assertVisible: "Please wait"

# Admin approve student's request to join the class
- runFlow:
    file: "e2e_artifact_upload.yaml"
    env:
      NAME: "db-student-signed-up"
- clearState: org.openeel.app
- runFlow: "school_admin_login_flow.yaml"
- tapOn: "Classes"
- assertVisible:
    id: "app_title"
    text: "Classes"
- tapOn: "New Class"
- assertVisible: "Pending requests.*"
- assertVisible: "Student User.*"
- tapOn: "Accept Invite"